# PPOIS2

lab1/: .gitignore  README.md  pyproject.toml  tests.py
lab1/CLI/: main.py
lab1/sources/: exceptions.py  models.py  storage.py  university.py
lab1/tests/: tests.py
lab2/: .gitignore  README.md  main.py  students.db
lab2/controller/: Controller.py
lab2/data/database/: database_test1.db  database_test2.db
lab2/data/xml/: xml_test1.xml  xml_test2.xml
lab2/model/: Model.py  RecordHandler.py
lab2/view/: DeleteDialog.py  InputDialog.py  MainWindow.py  PaginationWidget.py  SearchDialog.py
lab3/: README.md  main.py
lab3/sources/: entities.py  level_parser.py  records.py
lab3/sources/json/: level1.json  records.json  settings.json
lab4/: README.md  university.json
lab4/CLI/: handle_functions.py  main.py
lab4/sources/: university.py
lab4/web/: app.py
lab4/web/static/: script.js  style.css
lab4/web/templates/: index.html  student_detail.html  teacher_detail.html
Лаба 1/: .gitignore  pyproject.toml
Лаба 1/sources/: handle_functions.py
Лаба 1/tests/: tests.py
