[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "university-system"
version = "0.1.0"
description = "Система управления университетом"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["sources*"]

[tool.coverage.run]
data_file = "tests/.coverage"
source = ["sources"]
omit = [
    "*/handle_functions.py",
    "*/__init__.py"
]

[tool.coverage.html]
directory = "tests/htmlcov"